# onyx-web

./: .dockerignore  .env  .env.development  .env.production  .envrc  .gitattributes  .gitignore  .gitmodules  CLAUDE.md  Cargo.toml  Dockerfile.api  Dockerfile.web  LICENSE-APACHE  LICENSE-MIT  README.md  about.html  biome.jsonc  compose.yaml  demo.html  eslint.config.js  flake.nix  index.css  index.html  justfile  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  setup-windows.sh  tailwind.config.js  tsconfig.json  vite.config.ts
.github/workflows/: check.yml  claude-code-review.yml  claude-dispatch.yml  claude.yml  publish-web-image.yml
api/: .env.selfhost.example  .gitignore  justfile  package-lock.json  package.json  tsconfig.json  worker-configuration.d.ts  wrangler.jsonc
api/client/: package.json  tsconfig.json
api/migrations/: 0001_initial.sql  0002_avatar_type.sql  0003_favorites.sql  0004_local_password_auth.sql
api/server/: .dev.vars  .gitignore  justfile  package.json  tsconfig.json  worker-configuration.d.ts  wrangler.jsonc  wrangler.toml
api/src/: account.ts  auth.ts  avatar.ts  client.ts  config.ts  context.ts  database.ts  fave.ts  index.ts  node.ts  oauth.ts  room.ts  rpc.ts  shared.ts  storage.ts  types.d.ts
api/test/: api.contract.test.ts
app/: .env.android  .env.development  .env.live  .env.production  .env.staging  .gitignore  index.css  index.html  justfile  package.json  tailwind.config.js  tsconfig.json  vite.config.ts  worker-configuration.d.ts  wrangler.jsonc
backend/: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  README.md  build-docker.sh  dev.toml  docker.sh  env.example  flake.nix  justfile  rust-toolchain.toml
backend/.direnv/: flake-profile-1-link
backend/.sqlx/: query-033566b5279ae6829c0fbb22c68ee4d3f2fc055a6eb742e8fd8ce056782f82aa.json  query-0daf393d7f39a4173dbb18913cbb1dd698d8daba8f0ae9920b8ecf4f8f0f1d1d.json  query-0ee59f8f5f9f82dde6f5aef67f54110a87a3fd12e2cd144bb4c3181f37fc6dd0.json  query-192cfe332f5211f807728838b30434dd6c07f3b60f120adad0487efb5e7626ba.json  query-2b10decf21ad253277562b216ed68b9870a5761cc048cdd3daeac62b4ef060c9.json  query-37e457fb911f2cab56dc4121dca811de5f5aa60229945cb1dc4f4e3788dabdcc.json  query-b76352a0efd8442ce952822606d1c6cf3f1fb520fa856cfdc3ae5397d3161f45.json  query-ba743198b431f36507cd98da342f78778ca1ba8ccb56057e9c2dfa213230148c.json  query-eb9724e4bfb39e052af829e0f984edcc79247ec185ad96a6bcffcf636ca7b78a.json  query-eda2b9a5bab6c632feec717d8339b7831aa2fc11a6e496f8ae90d94cb413f282.json  query-f3cacf03d6d4bd28667ef791d8985add25104484ab1dec7c27d3c8f8856ec5da.json
backend/bindings/: account.ts  client.ts  generated.ts  index.ts  package.json  schema.ts
backend/bindings/typescript/: api.ts  package.json
backend/migrations/: 001_initial.sql
backend/src/: account.rs  avatars.rs  config.rs  dev.toml  error.rs  health.rs  lib.rs  main.rs  state.rs  storage.rs  types.rs
backend/src/auth/: error.rs  jwt.rs  mod.rs  oauth.rs  router.rs  token.rs  user.rs
backend/src/db/: mod.rs  models.rs
backend/src/handlers/: auth.rs  avatars.rs  health.rs  mod.rs  rooms.rs  user.rs  users.rs
backend/src/middleware/: auth.rs  mod.rs
backend/src/storage/: mod.rs
backend/terraform/: main.tf
backend/terraform/api/: input.tf  main.tf  output.tf
backend/terraform/env/dev/: .terraform.lock.hcl  main.tf
backend/terraform/env/dev-state/: .terraform.lock.hcl  main.tf  terraform.tfstate
backend/terraform/env/live/: main.tf
backend/terraform/env/live-state/: main.tf
backend/terraform/state/: main.tf
dev/: justfile
docker/: nginx-web.conf  web-entrypoint.sh
docs/: self-hosted-architecture.md
frontend/: .env.development  .gitignore  flake.nix  index.css  index.html  justfile  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vite.config.ts
infra/: .gitignore  BOOTSTRAP_SETUP.md  CLOUDFLARE_MIGRATION.md  README.md  REMOTE_STATE_SETUP.md  account.tf  bootstrap.sh  certificates.tf  dns.tf  flake.nix  instances.tf  justfile  main.tf  moq-relay.service.template  nixos-bootstrap.sh  outputs.tf  terraform.tfvars.example  tofu  variables.tf
native/: .env  .envrc  .gitignore  Cargo.toml  Info.plist  flake.nix  justfile  package.json  tauri.android.conf.json  tauri.conf.json  tauri.ios.conf.json  tauri.macos.conf.json  tauri.staging.json  tauri.windows.conf.json  wrangler.toml
native/capabilities/: default.json  desktop.json
native/icons/macos/: icon.icns
native/src/: lib.rs  update.rs
public/: bup.opus  chat1.opus
src/: about.tsx  audio.ts  avatar.ts  background.ts  background.tsx  broadcast.ts  chat.tsx  controls.tsx  dialog.tsx  favicon.ts  geometry.ts  icon.ts  index.css  index.tsx  me.tsx  meme.tsx  notifications.ts  room.ts  settings.tsx  status.tsx  sup.tsx  video.ts  vite-env.d.ts
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
(+271 files in other folders)
