[package]
name = "hang-api"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = { version = "0.8", features = ["macros", "multipart", "ws"] }
axum-extra = { version = "0.10", features = ["typed-header"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = [
	"fs",
	"cors",
	"trace",
	"request-id",
	"util",
] }
hyper = { version = "1.6", features = ["full"] }

# Async runtime
tokio = { version = "1.45", features = ["full"] }
async-trait = "0.1"

# Database
sqlx = { version = "0.8", features = [
	"runtime-tokio",
	"tls-rustls-aws-lc-rs",
	"postgres",
	"uuid",
	"chrono",
	"migrate",
	"macros",
] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Authentication & JWT
jsonwebtoken = "9.3"
openidconnect = "3.5"
url = "2.5"
uuid = { version = "1.17", features = ["v4", "serde"] }
urlencoding = "2.1"

# HTTP client
reqwest = { version = "0.12", features = [
	"json",
	"rustls-tls",
], default-features = false }

# Configuration
config = "0.15"
dotenvy = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Password hashing
argon2 = "0.5"

# Cloud storage
aws-sdk-s3 = "1.94"
aws-config = "1.8"

# Validation
validator = { version = "0.20", features = ["derive"] }

# File upload
tempfile = "3.20"
mime = "0.3"

# Rate limiting
governor = "0.10"

# OpenAPI documentation
utoipa = { version = "5.4", features = ["axum_extras", "chrono", "uuid"] }
utoipa-swagger-ui = { version = "9.0", features = ["axum"] }
toml-env = "1.2.0"
toml = "0.8.23"

[dev-dependencies]
tower-test = "0.4"
axum-test = "17.3"
