[package]
name = "hang"
version = "0.0.7"
description = "hang.live"
authors = ["Luke Curley <kixelated@gmail.com>"]
edition = "2021"
homepage = "https://hang.live"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "hang_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = ["config-json5"] }

[dependencies]
tauri = { version = "2", features = ["config-json5"] }
tauri-plugin-opener = "2"
tauri-plugin-process = "2"
tauri-plugin-oauth = "2"
# tauri-plugin-web-transport = "0.1.0"

serde_json = "1"
tauri-plugin-deep-link = "2"
tokio = { version = "1.47.1", features = ["time"] }
anyhow = "1.0.100"
rand = "0.9.2"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = { version = "2", features = ["deep-link"] }
tauri-plugin-updater = "2"
